# QR-writer

./: .gitignore  .travis.yaml  .travis.yml  Justfile  QRImager.cabal  README.md  TODO.md  cabal.project.local  qr-imager.cabal  stack.yaml
app/: Main.hs
src/: QRCodes.hs  QRRepa.hs
src/Data/: QRCodes.hs
src/Data/QRCodes/: Exe.hs  Image.hs  Signature.hs  Utils.hs
test/: Spec.hs
