name:                QRImager
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vmchale/QRImager#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           Copyright: (c) 2016 Vanessa McHale
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QRCodes
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , JuicyPixels
                     , vector
                     , bytestring
                     , lens
                     , cryptonite
                     , jose-jwt
                     , directory
                     , haskell-qrencode
  default-language:    Haskell2010

executable QRPipe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QRImager
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/QRImager
